# AgentProvenance

./: .gitignore  CHANGELOG.md  README.md  go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yml
cmd/agentprov/: main.go
cmd/agentprov-sensor/: main.go
demo/snake-supply-chain/: README.md  attestation.pub  run-snake-agent.forensics.dsse.json  (+1 more)
docs/: ai-access.md  comparisons.md  compliance.md  deployment-modes.md  ebpf-sensor-plan.md  interview-demo.md  mvp.md  openapi.yaml  phase1-audit.md  phase2.md  plan-observability-provenance-qbs.md  product.md  supply-chain-demo.md  telemetry-schema.md  v1-definition-of-done.md
scripts/: accept_batch_forensics.sh  accept_daemon_evidence_api.sh  accept_deploy1_batch_pipeline.sh  accept_evidence_query_pagination.sh  accept_evidence_tamper_detection.sh  accept_falco_risk_realistic.sh  accept_forensics_bundle.sh  accept_llm_intent_causality.sh  accept_native_sensor_risk.sh  accept_phase1.sh  accept_python_helper.sh  accept_signal_engine.sh  accept_telemetry_100k_pressure.sh  accept_telemetry_event_windows.sh  accept_telemetry_spool_backpressure.sh  accept_tetragon_ingest.sh  accept_unified_signals_attestation.sh  accept_zero_sdk_realistic.sh  demo_best_of_forks.sh  demo_coding_agent_best_of_n.sh  demo_cost_accounting.sh  demo_cpu_weight_control.sh  demo_egress_proxy.sh  demo_ioaware_snapshot_planner.sh  demo_policy_quarantine.sh  demo_preview_url.sh  demo_provenance_trace.sh  demo_runtime_policy.sh  demo_snapshot_fanout.sh  demo_telemetry_jsonl.sh  demo_v01_50_concurrency.sh  demo_v1.sh  regen-sensor.sh
(+224 files in other folders)
